# fiber-lsp-kit

./: .gitignore  AI-USAGE.md  LICENSE  LIVE_CONFIRM.md  LIVE_RESULTS.md  MASTER_PLAN.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  render.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/demo-console/: README.md  app.js  index.html  styles.css  transcript.js
docs/: ARCHITECTURE.md  CEREMONY.md  JIT-CHECKOUT.md  LSPS-Fiber.md  node-setup.md  upstream-fiber-findings.md  zk-artifacts.md
docs/superpowers/plans/: 2026-07-07-modular-foundation-implementation.md  2026-07-07-single-node-jit-implementation.md
docs/superpowers/specs/: 2026-07-07-modular-architecture-design.md  2026-07-07-single-node-jit-design.md
examples/reference-lsp/: README.md  server.mjs
registry/: README.md  providers.json  providers.schema.json
scripts/: demo.mjs  fetch-artifacts.mjs  linkage-witness-input.mjs  live-features.mjs  merchant-demo.mjs  part-c-raw-open.sh  part-d-ckb.mjs  part-e-rusd.mjs
scripts/ceremony/: contribute.sh  finalize.sh
scripts/demo/: 00-setup.mjs  01-discover-lsp.mjs  02-buy-inbound.mjs  03-invoice.mjs  04-pay.mjs  05-stream-rent.mjs  README.md  demo.config.json  e2e.mjs  live-features.mjs  mock-fnn.mjs  node-setup.md
scripts/demo/actions/: direct-invoice.mjs  direct-pay.mjs  pay.mjs  request-invoice.mjs  stream-rent.mjs
scripts/demo/dashboard/: dashboard.css  dashboard.js  index.html
scripts/demo/lib/: artifacts.mjs  config.mjs  mock-node.mjs
scripts/demo/linked/: README.md  config.mjs  customer.mjs  dashboard.mjs  demo.config.json  e2e.mjs  hosted.mjs  lsp.mjs  merchant.mjs  mock-fnn.mjs  prepare-hosted-artifacts.mjs
scripts/demo/linked/actions/: pay-regular-invoice.mjs  request-regular-invoice.mjs  status.mjs  stream-rent.mjs
scripts/demo/same-hash/: README.md  config.mjs  customer.mjs  demo.config.json  e2e.mjs  lsp.mjs  merchant.mjs  mock-fnn.mjs
scripts/demo/servers/: customer.mjs  lsp.mjs  merchant.mjs
scripts/demo/shared/: actions.mjs  artifacts.mjs  ckb-balance.mjs  config.mjs  console.mjs  customer-server.mjs  dashboard-data.mjs  dashboard-server.mjs  e2e-flow.mjs  hosted-runtime.mjs  merchant-server.mjs  mock-node.mjs  node-state.mjs  operations.mjs  preflight.mjs  processes.mjs  state.mjs
scripts/live/: .invoice.json  .lsp.json  00-setup.mjs  01-discover-lsp.mjs  02-buy-inbound.mjs  03-invoice.mjs  04-pay.mjs  05-stream-rent.mjs  06-jit.mjs  README.md  node-setup.md  run-all.mjs
scripts/live/lib/: profile.mjs
scripts/live/networks/: local.json  testnet.json
scripts/release/: build-artifacts.mjs
scripts/theater/: README.md  customer.mjs  lsp.mjs  merchant.mjs  mock-fnn.mjs
spec/: LSPS-Fiber.md
tools/linkage-prover/: Cargo.toml
tools/linkage-prover/src/: lib.rs  main.rs  zkey.rs
(+2 files in other folders)
